--- a/PrivateFramework.xcframework/ios-arm64/PrivateFramework.framework/Modules/PrivateFramework.swiftmodule/arm64-apple-ios.abi.json
+++ b/PrivateFramework.xcframework/ios-arm64/PrivateFramework.framework/Modules/PrivateFramework.swiftmodule/arm64-apple-ios.abi.json
@@ -57,7 +57,8 @@
             "moduleName": "PrivateFramework",
             "declAttributes": [
               "Final",
-              "AccessControl"
+              "AccessControl",
+              "RawDocComment"
             ],
             "funcSelfKind": "NonMutating"
           }
@@ -68,7 +69,8 @@
         "moduleName": "PrivateFramework",
         "declAttributes": [
           "Final",
-          "AccessControl"
+          "AccessControl",
+          "RawDocComment"
         ]
       }
     ],
